2003-08-25 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot/refrag.py: Introduced the refrag module. It contains
	  reusable "fragments" of regular expression patterns. It's
	  meant to reduce the number of times one has to code similar
	  patterns.
	* pybot/rss.py: Introduced generic RSS module! It's based on
	  Mark Pilgrim's "ultra liberal" parser, and allows one
	  to send news from any RSS feed to any user/channel/server.
	* QUICK_START: Added small startup tutorial.
	* modules/{help.py,infopack.py}: Integrated infopack help
	  into main help.

2003-08-24 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot/misc.py,modules/help.py,modules/*: Now regular
	  expressions are using a single space, and misc.regexp()
	  and mm.register_help() convert them to \s+ and \s*.
	* pybot/misc.py: Fixed small issues on buildanswer().
	* pybot/{sqlite.db,__init__.py}: Improved SQLiteDB.table().
	  Now it handles spaces in the fields list gracefully
	  without changing the table. Introduced new oncreate
	  parameter to table() that accepts random sql commands
	  on table creation. Changed SQLiteDB constructor to
	  accept the path as a parameter, so that sqlitedb doesn't
	  import pybot anymore. Introduced support for triggers,
	  constraints, beforecreate, and aftercreate in
	  SQLiteDB.table().

2003-08-23 Gustavo Niemeyer <niemeyer@conectiva.com>
        * pybot/__init__.py,modules/{remoteinfo.py,freshmeat.py}:
	  Instead of setting the proxy settings in each module
	  using urllib, set the http_proxy environment variable
	  in pybot.init().
	* pybot/locals.py,pybot/misc.py,modules/*:
	  Introduced pybot.locals. All basic instances of the pybot
	  API are now defined on this file, and all modules are
	  running "from pybot.locals import *".
	* pybot/misc.py,modules/*: Introduced misc.regexp(). This
	  function is a wrapper on top of re.compile() which will
	  deal better with the pybot triggers expressions.

2003-08-22 Gustavo Niemeyer <niemeyer@conectiva.com>