@@ -1,3 +1,8 @@
+2003-08-26 Gustavo Niemeyer <niemeyer@conectiva.com>
+	* pybot/misc.py: Introduced striphtml().
+	* pybot/rss.py: Allow all news to be colapsed in one line.
+	  Strip html from fields. Other minor changes and fixes.
+
 2003-08-25 Gustavo Niemeyer <niemeyer@conectiva.com>
 	* pybot/refrag.py: Introduced the refrag module. It contains
 	  reusable "fragments" of regular expression patterns. It's
